update about page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -113,3 +113,131 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+
+@INPROCEEDINGS{9344443,
+  abbr={CinC},
+  bibtex_show={true},
+  author={Rupp, Lindsay C and \textbf{Liu, Zexin} and Bergquist, Jake A and Rampersad, Sumientra and White, Dan and Tate, Jess D and Brooks, Dana H and Narayan, Akil and MacLeod, Rob S},
+  booktitle={2020 Computing in Cardiology}, 
+  title={Using UncertainSCI to Quantify Uncertainty in Cardiac Simulations}, 
+  year={2020},
+  volume={},
+  number={},
+  pages={1-4},
+  keywords={Torso;Uncertain systems;Uncertainty;Sensitivity;Computational modeling;Biological system modeling;Stochastic processes},
+  doi={10.22489/CinC.2020.275}}
+
+@article{Liu2021ttr,
+  abbr={JSC},
+  bibtex_show={true},
+  title="{On the Computation of Recurrence Coefficients for Univariate Orthogonal Polynomials}",
+  author={\textbf{Liu, Zexin} and Narayan, Akil},
+  abstract={Associated to a finite measure on the real line with finite moments are recurrence coefficients in a three-term formula for orthogonal polynomials with respect to this measure. These recurrence coefficients are frequently inputs to modern computational tools that facilitate evaluation and manipulation of polynomials with respect to the measure, and such tasks are foundational in numerical approximation and quadrature. Although the recurrence coefficients for classical measures are known explicitly, those for nonclassical measures must typically be numerically computed. We survey and review existing approaches for computing these recurrence coefficients for univariate orthogonal polynomial families and propose a novel “predictor–corrector” algorithm for a general class of continuous measures. We combine the predictor–corrector scheme with a stabilized Lanczos procedure for a new hybrid algorithm that computes recurrence coefficients for a fairly wide class of measures that can have both continuous and discrete parts. We evaluate the new algorithms against existing methods in terms of accuracy and efficiency.},
+  journal={Journal of Scientific Computing},
+  volume={88},
+  number={53},
+  issue={3},
+  pages={},
+  numpages={},
+  year={2021},
+  publisher=Springer US,
+  doi={110.1007/s10915-021-01586-w},
+  url={hhttps://doi.org/10.1007/s10915-021-01586-w},
+  additional_info={. *More Information* can be [found here](https://github.com/ZEXINLIU/Uni_ttr_examples)},
+  selected={true},
+}
+
+@article{uncertainsci2021brain,
+  abbr={Brain Stimulation},
+  bibtex_show={true},
+  title="{Uncertainty Quantification in Brain Stimulation using UncertainSCI}",
+  author={Tate, Jess and Rampersad Sumientra and Charlebois, Chantel and \textbf{Liu, Zexin} and Bergquist, Jake and White, Dan and Rupp, Lindsay and Brooks, Dana and Narayan, Akil and MacLeod, Rob},
+  abstract={},
+  journal={Brain Stimulation: Basic, Translational, and Clinical Research in Neuromodulation},
+  volume={14},
+  number={},
+  issue={6},
+  pages={1659-1660},
+  numpages={2},
+  year={2021},
+  publisher=Elsevier,
+  doi={10.1016/j.brs.2021.10.226},
+  url={https://doi.org/10.1016/j.brs.2021.10.226},
+  additional_info={},
+}
+
+@article{NARAYAN2023106407,
+abbr={CBM},
+bibtex_show={true},
+title = {UncertainSCI: Uncertainty quantification for computational models in biomedicine and bioengineering},
+journal = {Computers in Biology and Medicine},
+volume = {152},
+pages = {106407},
+year = {2023},
+issn = {0010-4825},
+doi = {https://doi.org/10.1016/j.compbiomed.2022.106407},
+url = {https://www.sciencedirect.com/science/article/pii/S0010482522011155},
+author = {Akil Narayan and \textbf{Zexin Liu} and Jake A. Bergquist and Chantel Charlebois and Sumientra Rampersad and Lindsay Rupp and Dana Brooks and Dan White and Jess Tate and Rob S. MacLeod},
+keywords = {Biomedical simulations, Uncertainty quantification, Open-source software},
+abstract = {Background:
+Computational biomedical simulations frequently contain parameters that model physical features, material coefficients, and physiological effects, whose values are typically assumed known a priori. Understanding the effect of variability in those assumed values is currently a topic of great interest. A general-purpose software tool that quantifies how variation in these parameters affects model outputs is not broadly available in biomedicine. For this reason, we developed the ‘UncertainSCI’ uncertainty quantification software suite to facilitate analysis of uncertainty due to parametric variability.
+Methods:
+We developed and distributed a new open-source Python-based software tool, UncertainSCI, which employs advanced parameter sampling techniques to build polynomial chaos (PC) emulators that can be used to predict model outputs for general parameter values. Uncertainty of model outputs is studied by modeling parameters as random variables, and model output statistics and sensitivities are then easily computed from the emulator. Our approaches utilize modern, near-optimal techniques for sampling and PC construction based on weighted Fekete points constructed by subsampling from a suitably randomized candidate set.
+Results:
+Concentrating on two test cases—modeling bioelectric potentials in the heart and electric stimulation in the brain—we illustrate the use of UncertainSCI to estimate variability, statistics, and sensitivities associated with multiple parameters in these models.
+Conclusion:
+UncertainSCI is a powerful yet lightweight tool enabling sophisticated probing of parametric variability and uncertainty in biomedical simulations. Its non-intrusive pipeline allows users to leverage existing software libraries and suites to accurately ascertain parametric uncertainty in a variety of applications.},
+selected={true},
+}
+
+@article{TATE202384249,
+  abbr={JOSS},
+  bibtex_show={true},
+  title="{UncertainSCI: A Python Package for Noninvasive Parametric Uncertainty Quantification of Simulation Pipelines}",
+  author={Tate, Jess and \textbf{Liu, Zexin} and Bergquist, Jake and Rampersad Sumientra and White, Dan and Charlebois, Chantel and Rupp, Lindsay and Brooks, Dana and MacLeod, Rob and Narayan, Akil},
+  abstract={},
+  journal={The Journal of Open Source Software},
+  volume={8},
+  number={90},
+  issue={},
+  pages={},
+  numpages={},
+  year={2023},
+  publisher=The Open Journal,
+  doi={10.21105/joss.04249},
+  url={https://doi.org/10.21105/joss.04249},
+  additional_info={},
+}
+
+@article{doi:10.1137/22M1477131,
+abbr={SISC},
+bibtex_show={true},
+author = {\textbf{Liu, Zexin} and Narayan, Akil},
+title = {A Stieltjes Algorithm for Generating Multivariate Orthogonal Polynomials},
+journal = {SIAM Journal on Scientific Computing},
+volume = {45},
+number = {3},
+pages = {A1125-A1147},
+year = {2023},
+doi = {10.1137/22M1477131},
+url= {https://doi.org/10.1137/22M1477131},
+abstract = { Abstract. Orthogonal polynomials of several variables have a vector-valued three-term recurrence relation, much like the corresponding one-dimensional relation. This relation requires only knowledge of certain recurrence matrices, and allows simple and stable evaluation of multivariate orthogonal polynomials. In the univariate case, various algorithms can stably and accurately evaluate the recurrence coefficients given the ability to compute polynomial moments, but it is difficult to identify analogous procedures in multiple dimensions. We present a new Multivariate Stieltjes (MS) algorithm that fills this gap in the multivariate case, allowing computation of recurrence matrices assuming moments are available. The algorithm is essentially explicit in two and three dimensions, but requires the numerical solution to a nonconvex problem in more than three dimensions. Compared to direct Gram–Schmidt-type orthogonalization, we demonstrate on several examples in up to three dimensions that the MS algorithm is far more stable, and allows accurate computation of orthogonal bases in the multivariate setting, in contrast to direct orthogonalization approaches. },
+additional_info={. *More Information* can be [found here](https://github.com/ZEXINLIU/Multi_ttr_examples)},
+selected={true},
+}
+
+@article{Berggren2024,
+abbr={BMMB},
+bibtex_show={true},
+author={Berggren, Caleb C. and Jiang, David and Jack Wang, Y. F. and Bergquist, Jake A. and Rupp, Lindsay C. and \textbf{Liu, Zexin} and MacLeod, Rob and Narayan, Akil and Timmins, Lucas H.},
+title = {A Stieltjes Algorithm for Generating Multivariate Orthogonal Polynomials},
+journal = {Biomechanics and Modeling in Mechanobiology},
+volume = {23},
+number = {},
+pages = {927-940},
+year = {2024},
+doi = {10.1007/s10237-023-01814-2},
+url= {https://doi.org/10.1007/s10237-023-01814-2},
+abstract = { Central to the clinical adoption of patient-specific modeling strategies is demonstrating that simulation results are reliable and safe. Indeed, simulation frameworks must be robust to uncertainty in model input(s), and levels of confidence should accompany results. In this study, we applied a coupled uncertainty quantification–finite element (FE) framework to understand the impact of uncertainty in vascular material properties on variability in predicted stresses. Univariate probability distributions were fit to material parameters derived from layer-specific mechanical behavior testing of human coronary tissue. Parameters were assumed to be probabilistically independent, allowing for efficient parameter ensemble sampling. In an idealized coronary artery geometry, a forward FE model for each parameter ensemble was created to predict tissue stresses under physiologic loading. An emulator was constructed within the UncertainSCI software using polynomial chaos techniques, and statistics and sensitivities were directly computed. Results demonstrated that material parameter uncertainty propagates to variability in predicted stresses across the vessel wall, with the largest dispersions in stress within the adventitial layer. Variability in stress was most sensitive to uncertainties in the anisotropic component of the strain energy function. Moreover, unary and binary interactions within the adventitial layer were the main contributors to stress variance, and the leading factor in stress variability was uncertainty in the stress-like material parameter that describes the contribution of the embedded fibers to the overall artery stiffness. Results from a patient-specific coronary model confirmed many of these findings. Collectively, these data highlight the impact of material property variation on uncertainty in predicted artery stresses and present a pipeline to explore and characterize forward model uncertainty in computational biomechanics. },
+additional_info={},
+}
