--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -140,7 +140,7 @@
   pages={},
   numpages={},
   year={2021},
-  publisher=Springer US,
+  publisher={Springer US},
   doi={110.1007/s10915-021-01586-w},
   url={hhttps://doi.org/10.1007/s10915-021-01586-w},
   additional_info={. *More Information* can be [found here](https://github.com/ZEXINLIU/Uni_ttr_examples)},
@@ -160,7 +160,7 @@
   pages={1659-1660},
   numpages={2},
   year={2021},
-  publisher=Elsevier,
+  publisher={Elsevier},
   doi={10.1016/j.brs.2021.10.226},
   url={https://doi.org/10.1016/j.brs.2021.10.226},
   additional_info={},
@@ -188,6 +188,7 @@ Concentrating on two test cases—modeling bioelectric potentials in the heart a
 Conclusion:
 UncertainSCI is a powerful yet lightweight tool enabling sophisticated probing of parametric variability and uncertainty in biomedical simulations. Its non-intrusive pipeline allows users to leverage existing software libraries and suites to accurately ascertain parametric uncertainty in a variety of applications.},
 selected={true},
+publisher={Elsevier},
 }
 
 @article{TATE202384249,
@@ -203,7 +204,7 @@ selected={true},
   pages={},
   numpages={},
   year={2023},
-  publisher=The Open Journal,
+  publisher={The Open Journal},
   doi={10.21105/joss.04249},
   url={https://doi.org/10.21105/joss.04249},
   additional_info={},
@@ -221,6 +222,7 @@ pages = {A1125-A1147},
 year = {2023},
 doi = {10.1137/22M1477131},
 url= {https://doi.org/10.1137/22M1477131},
+publisher={Society for Industrial & Applied Mathematics (SIAM)},
 abstract = { Abstract. Orthogonal polynomials of several variables have a vector-valued three-term recurrence relation, much like the corresponding one-dimensional relation. This relation requires only knowledge of certain recurrence matrices, and allows simple and stable evaluation of multivariate orthogonal polynomials. In the univariate case, various algorithms can stably and accurately evaluate the recurrence coefficients given the ability to compute polynomial moments, but it is difficult to identify analogous procedures in multiple dimensions. We present a new Multivariate Stieltjes (MS) algorithm that fills this gap in the multivariate case, allowing computation of recurrence matrices assuming moments are available. The algorithm is essentially explicit in two and three dimensions, but requires the numerical solution to a nonconvex problem in more than three dimensions. Compared to direct Gram–Schmidt-type orthogonalization, we demonstrate on several examples in up to three dimensions that the MS algorithm is far more stable, and allows accurate computation of orthogonal bases in the multivariate setting, in contrast to direct orthogonalization approaches. },
 additional_info={. *More Information* can be [found here](https://github.com/ZEXINLIU/Multi_ttr_examples)},
 selected={true},
@@ -238,6 +240,7 @@ pages = {927-940},
 year = {2024},
 doi = {10.1007/s10237-023-01814-2},
 url= {https://doi.org/10.1007/s10237-023-01814-2},
+publisher={Springer},
 abstract = { Central to the clinical adoption of patient-specific modeling strategies is demonstrating that simulation results are reliable and safe. Indeed, simulation frameworks must be robust to uncertainty in model input(s), and levels of confidence should accompany results. In this study, we applied a coupled uncertainty quantification–finite element (FE) framework to understand the impact of uncertainty in vascular material properties on variability in predicted stresses. Univariate probability distributions were fit to material parameters derived from layer-specific mechanical behavior testing of human coronary tissue. Parameters were assumed to be probabilistically independent, allowing for efficient parameter ensemble sampling. In an idealized coronary artery geometry, a forward FE model for each parameter ensemble was created to predict tissue stresses under physiologic loading. An emulator was constructed within the UncertainSCI software using polynomial chaos techniques, and statistics and sensitivities were directly computed. Results demonstrated that material parameter uncertainty propagates to variability in predicted stresses across the vessel wall, with the largest dispersions in stress within the adventitial layer. Variability in stress was most sensitive to uncertainties in the anisotropic component of the strain energy function. Moreover, unary and binary interactions within the adventitial layer were the main contributors to stress variance, and the leading factor in stress variability was uncertainty in the stress-like material parameter that describes the contribution of the embedded fibers to the overall artery stiffness. Results from a patient-specific coronary model confirmed many of these findings. Collectively, these data highlight the impact of material property variation on uncertainty in predicted artery stresses and present a pipeline to explore and characterize forward model uncertainty in computational biomechanics. },
 additional_info={},
 }
