update announcement, try to fix papers textbf

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -117,7 +117,7 @@
 @INPROCEEDINGS{9344443,
   abbr={CinC},
   bibtex_show={true},
-  author={Rupp, Lindsay C and \textbf{Liu, Zexin} and Bergquist, Jake A and Rampersad, Sumientra and White, Dan and Tate, Jess D and Brooks, Dana H and Narayan, Akil and MacLeod, Rob S},
+  author={Rupp, Lindsay C and Liu, Zexin and Bergquist, Jake A and Rampersad, Sumientra and White, Dan and Tate, Jess D and Brooks, Dana H and Narayan, Akil and MacLeod, Rob S},
   booktitle={2020 Computing in Cardiology}, 
   title={Using UncertainSCI to Quantify Uncertainty in Cardiac Simulations}, 
   year={2020},
@@ -131,7 +131,7 @@
   abbr={JSC},
   bibtex_show={true},
   title="{On the Computation of Recurrence Coefficients for Univariate Orthogonal Polynomials}",
-  author={\textbf{Liu, Zexin} and Narayan, Akil},
+  author={Liu, Zexin and Narayan, Akil},
   abstract={Associated to a finite measure on the real line with finite moments are recurrence coefficients in a three-term formula for orthogonal polynomials with respect to this measure. These recurrence coefficients are frequently inputs to modern computational tools that facilitate evaluation and manipulation of polynomials with respect to the measure, and such tasks are foundational in numerical approximation and quadrature. Although the recurrence coefficients for classical measures are known explicitly, those for nonclassical measures must typically be numerically computed. We survey and review existing approaches for computing these recurrence coefficients for univariate orthogonal polynomial families and propose a novel “predictor–corrector” algorithm for a general class of continuous measures. We combine the predictor–corrector scheme with a stabilized Lanczos procedure for a new hybrid algorithm that computes recurrence coefficients for a fairly wide class of measures that can have both continuous and discrete parts. We evaluate the new algorithms against existing methods in terms of accuracy and efficiency.},
   journal={Journal of Scientific Computing},
   volume={88},
@@ -151,7 +151,7 @@
   abbr={Brain Stimulation},
   bibtex_show={true},
   title="{Uncertainty Quantification in Brain Stimulation using UncertainSCI}",
-  author={Tate, Jess and Rampersad Sumientra and Charlebois, Chantel and \textbf{Liu, Zexin} and Bergquist, Jake and White, Dan and Rupp, Lindsay and Brooks, Dana and Narayan, Akil and MacLeod, Rob},
+  author={Tate, Jess and Rampersad Sumientra and Charlebois, Chantel and Liu, Zexin and Bergquist, Jake and White, Dan and Rupp, Lindsay and Brooks, Dana and Narayan, Akil and MacLeod, Rob},
   abstract={},
   journal={Brain Stimulation: Basic, Translational, and Clinical Research in Neuromodulation},
   volume={14},
@@ -177,7 +177,7 @@ year = {2023},
 issn = {0010-4825},
 doi = {https://doi.org/10.1016/j.compbiomed.2022.106407},
 url = {https://www.sciencedirect.com/science/article/pii/S0010482522011155},
-author = {Akil Narayan and \textbf{Zexin Liu} and Jake A. Bergquist and Chantel Charlebois and Sumientra Rampersad and Lindsay Rupp and Dana Brooks and Dan White and Jess Tate and Rob S. MacLeod},
+author = {Akil Narayan and Zexin Liu and Jake A. Bergquist and Chantel Charlebois and Sumientra Rampersad and Lindsay Rupp and Dana Brooks and Dan White and Jess Tate and Rob S. MacLeod},
 keywords = {Biomedical simulations, Uncertainty quantification, Open-source software},
 abstract = {Background:
 Computational biomedical simulations frequently contain parameters that model physical features, material coefficients, and physiological effects, whose values are typically assumed known a priori. Understanding the effect of variability in those assumed values is currently a topic of great interest. A general-purpose software tool that quantifies how variation in these parameters affects model outputs is not broadly available in biomedicine. For this reason, we developed the ‘UncertainSCI’ uncertainty quantification software suite to facilitate analysis of uncertainty due to parametric variability.
@@ -195,7 +195,7 @@ publisher={Elsevier},
   abbr={JOSS},
   bibtex_show={true},
   title="{UncertainSCI: A Python Package for Noninvasive Parametric Uncertainty Quantification of Simulation Pipelines}",
-  author={Tate, Jess and \textbf{Liu, Zexin} and Bergquist, Jake and Rampersad Sumientra and White, Dan and Charlebois, Chantel and Rupp, Lindsay and Brooks, Dana and MacLeod, Rob and Narayan, Akil},
+  author={Tate, Jess and Liu, Zexin and Bergquist, Jake and Rampersad Sumientra and White, Dan and Charlebois, Chantel and Rupp, Lindsay and Brooks, Dana and MacLeod, Rob and Narayan, Akil},
   abstract={},
   journal={The Journal of Open Source Software},
   volume={8},
@@ -208,12 +208,13 @@ publisher={Elsevier},
   doi={10.21105/joss.04249},
   url={https://doi.org/10.21105/joss.04249},
   additional_info={},
+  selected={true},
 }
 
 @article{doi:10.1137/22M1477131,
 abbr={SISC},
 bibtex_show={true},
-author = {\textbf{Liu, Zexin} and Narayan, Akil},
+author = {{\textbf{Liu, Zexin}} and Narayan, Akil},
 title = {A Stieltjes Algorithm for Generating Multivariate Orthogonal Polynomials},
 journal = {SIAM Journal on Scientific Computing},
 volume = {45},
@@ -226,12 +227,13 @@ publisher={Society for Industrial & Applied Mathematics (SIAM)},
 abstract = { Abstract. Orthogonal polynomials of several variables have a vector-valued three-term recurrence relation, much like the corresponding one-dimensional relation. This relation requires only knowledge of certain recurrence matrices, and allows simple and stable evaluation of multivariate orthogonal polynomials. In the univariate case, various algorithms can stably and accurately evaluate the recurrence coefficients given the ability to compute polynomial moments, but it is difficult to identify analogous procedures in multiple dimensions. We present a new Multivariate Stieltjes (MS) algorithm that fills this gap in the multivariate case, allowing computation of recurrence matrices assuming moments are available. The algorithm is essentially explicit in two and three dimensions, but requires the numerical solution to a nonconvex problem in more than three dimensions. Compared to direct Gram–Schmidt-type orthogonalization, we demonstrate on several examples in up to three dimensions that the MS algorithm is far more stable, and allows accurate computation of orthogonal bases in the multivariate setting, in contrast to direct orthogonalization approaches. },
 additional_info={. *More Information* can be [found here](https://github.com/ZEXINLIU/Multi_ttr_examples)},
 selected={true},
+google_scholar_id={ViwJ6FoAAAAJ},
 }
 
 @article{Berggren2024,
 abbr={BMMB},
 bibtex_show={true},
-author={Berggren, Caleb C. and Jiang, David and Jack Wang, Y. F. and Bergquist, Jake A. and Rupp, Lindsay C. and \textbf{Liu, Zexin} and MacLeod, Rob and Narayan, Akil and Timmins, Lucas H.},
+author={Berggren, Caleb C. and Jiang, David and Jack Wang, Y. F. and Bergquist, Jake A. and Rupp, Lindsay C. and Liu, Zexin and MacLeod, Rob and Narayan, Akil and Timmins, Lucas H.},
 title = {A Stieltjes Algorithm for Generating Multivariate Orthogonal Polynomials},
 journal = {Biomechanics and Modeling in Mechanobiology},
 volume = {23},
